put team, regenerated pdf

--- a/report.tex
+++ b/report.tex
@@ -391,9 +391,24 @@
     \maketitle
     
     
-
+    {\Large 
+    \begin{center}
+        \begin{verbatim}
+                             Team #1
+        +---------------------------------+-----+----+
+        |              Name               | SEC | BN |
+        +---------------------------------+-----+----+
+        | Abdulrahman Khalid Hassan       |   1 | 30 |
+        | Mahmoud Othman Adas             |   2 | 19 |
+        | Yosry Mohamed Yosry             |   2 | 33 |
+        | Ahmad Mahmoud AbdElMen'em Afifi |   1 |  5 |
+        +---------------------------------+-----+----+
+        \end{verbatim}
+    \end{center}
+    }
     
-    \# Introduction
+    \section{Introduction}
+    
 
     LendingClub is a US peer-to-peer lending company, headquartered in San
 Francisco, California. It was the first peer-to-peer lender to register
@@ -971,7 +986,7 @@ True Negative values
 
     \textbf{Accuracy = 97.46\%}
 
-    \# Conclusion
+    \section{Conclusion}
 
     \begin{itemize}
 \tightlist
