--- a/report.tex
+++ b/report.tex
@@ -425,7 +425,7 @@ Objectives of this notebook is: - To show step-by-step how to visualize
 the dataset. - Data cleaning and preprocessing. - Assess whether or not
 a new customer is likely to pay back the loan.
 
-    \# Univariant Visualization
+    \section{Univariant Visualization}
 
     \hypertarget{loan-status-distribution}{%
 \subsection{Loan Status Distribution}\label{loan-status-distribution}}
@@ -554,7 +554,7 @@ important they would be filled, so We will drop them
 for example, Drop the followin columns as they are constant columns and
 doesn't contribute to our prediction of loan\_status
 
-    \# Bivariant Visualization
+    \section{Bivariant Visualization}
 
     \begin{center}
     \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{report_files/report_25_0.png}
@@ -648,7 +648,7 @@ After dropping these columns
 (1340812, 41)
     \end{Verbatim}
 
-    \# Preprocessing
+    \section{Preprocessing}
 
     \hypertarget{loan_status-column}{%
 \subsubsection{loan\_status Column}\label{loan_status-column}}
@@ -805,7 +805,7 @@ only showing top 1 row
 
     From previous table the number of scaled\_features are 81 feature
 
-    \# Deeplearning Model
+    \section{Deeplearning Model}
 
     \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -908,7 +908,7 @@ Non-trainable params: 0
 INFO:tensorflow:Assets written to: loan\_prediction\_model/assets
     \end{Verbatim}
 
-    \# Gradient Boosting Tree (spark)
+    \section{Gradient Boosting Tree (spark)}
 
     \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
